# russell

./: .env.example  .gitignore  ACP-INTEGRATION-COMPLETE.md  ACP-READY.md  AGENTS.md  CHANGELOG.md  CLEANUP-COMPLETE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT-VERIFICATION.md  HANDOFF.md  INTEGRATION-STATUS-FINAL.md  LICENSE-APACHE  LICENSE-MIT  MACHINE_PROFILE.md  Makefile  PHASE1-COMPLETE.md  PHASE3-COMPLETE.md  PHASE3-TEMPLATE-SKILLS-PROGRESS.md  PHASES-4-7-COMPLETE.md  README.md  REFACTORING-COMPLETE.md  REPLICANT.md  REUSE_MANIFEST.md  cybernetic-health-harness.md  deny.toml  install.sh  llms.txt  rust-toolchain.toml  rustfmt.toml  scenario-tests.sh
.cargo/: config.toml
crates/russell-acp-server/: Cargo.toml
crates/russell-acp-server/src/: auth.rs  cns.rs  dispatch.rs  encryption.rs  error.rs  handler.rs  lib.rs  main.rs  persona.rs  port.rs  rate_limit.rs  session.rs  transport.rs  types.rs
crates/russell-agent/: Cargo.toml  agent_persona.yaml
crates/russell-agent/src/: artifacts.rs  cns.rs  lib.rs  lifecycle.rs  persona.rs  pod.rs
crates/russell-api-server/: Cargo.toml
crates/russell-api-server/src/: lib.rs  main.rs  routes.rs
crates/russell-cli/: Cargo.toml
crates/russell-cli/src/: cli_utils.rs  main.rs
crates/russell-cli/src/commands/: chat.rs  confirm.rs  digest.rs  docs.rs  help.rs  list.rs  mcp_tools.rs  mod.rs  okapi_probe.rs  pod.rs  profile.rs  proprio.rs  self_triage.rs  sentinel_once.rs  skill.rs  skill_lifecycle.rs  status.rs  utils.rs  verify.rs  workshop.rs
crates/russell-core/: Cargo.toml
crates/russell-core/src/: config.rs  encryption.rs  env.rs  error.rs  event.rs  hash_chain.rs  identity.rs  inference.rs  lib.rs  paths.rs  profile.rs  risk.rs  schedule.rs  sovereignty.rs  telemetry.rs  time.rs
crates/russell-doctor/: Cargo.toml
crates/russell-doctor/prompts/: jack-chat.md  jack.md
crates/russell-doctor/src/: action.rs  client.rs  error.rs  fallback.rs  health.rs  help.rs  lib.rs  mock.rs  oai_client.rs  openrouter.rs  prompt.rs
crates/russell-mcp/: Cargo.toml
crates/russell-mcp-server/: Cargo.toml
crates/russell-mcp-server/src/: lib.rs  tools.rs
crates/russell-mcp/src/: auth.rs  client.rs  config.rs  error.rs  health.rs  lib.rs  port.rs  registry.rs  types.rs
crates/russell-meta/: Cargo.toml
crates/russell-meta/data/: prompt-templates.yaml
crates/russell-meta/prompts/: jack-chat.md  jack.md
crates/russell-meta/src/: action.rs  client.rs  error.rs  fallback.rs  fallback_adapter.rs  health.rs  help.rs  hkask_adapter.rs  lib.rs  mock.rs  oai_client.rs  okapi_adapter.rs  prompt.rs  prompt_builders.rs  prompt_knapsack.rs  prompt_registry.rs  prompt_unified.rs  rate_limit.rs  sanitizer.rs
crates/russell-proprio/: Cargo.toml
crates/russell-proprio/src/: lib.rs  reflex.rs
crates/russell-protocol/: Cargo.toml
crates/russell-protocol/src/: auth.rs  jsonrpc.rs  lib.rs  notification.rs  skill.rs
crates/russell-reflex/: Cargo.toml
crates/russell-reflex/src/: action.rs  arc.rs  lib.rs  risk.rs
crates/russell-session/: Cargo.toml
crates/russell-session/src/: engine.rs  error.rs  lib.rs  port.rs  session.rs  types.rs
crates/russell-testing/: Cargo.toml
crates/russell-testing/src/: core_tests.rs  lib.rs
skills/okapi-watcher/: Cargo.toml  SKILL.md  agent_persona.yaml  hlexicon.yaml  manifest.yaml  skill.json
skills/okapi-watcher/scripts/: probe-capabilities.sh  probe-gpu-libs.sh  probe-health.sh  probe-models.sh
skills/okapi-watcher/templates/: gpu-fallback.j2  health-critical.j2  health-ok.j2  no-models.j2  selector.j2
skills/skill-discovery/: Cargo.toml  KNOWLEDGE.md  SKILL.md  agent_persona.yaml  hlexicon.yaml  manifest.yaml  skill.json
skills/skill-discovery/templates/: download-complete.j2  evaluate-fail.j2  evaluate-pass.j2  install-complete.j2  recommendations.j2  search-results.j2  selector.j2  welcome.j2
skills/skill-maintenance/: Cargo.toml  KNOWLEDGE.md  SKILL.md  agent_persona.yaml  hlexicon.yaml  manifest.yaml  skill.json
skills/skill-maintenance/templates/: audit-menu.j2  coverage-complete.j2  coverage-gaps.j2  deprecation-report.j2  quality-report.j2  selector.j2  staleness-report.j2
skills/skill-manager/: Cargo.toml  KNOWLEDGE.md  SKILL.md  agent_persona.yaml  hlexicon.yaml  manifest.yaml  skill.json
skills/skill-manager/scripts/: build-skill.sh  install-skill.sh  list-skills.sh  prune-skill.sh  registry-status.sh  restore-from-archive.sh  restore-skill.sh  retire-skill.sh  skill-check.sh  skill-stats.sh  verify-skill.sh
skills/skill-manager/templates/: build-proposal.j2  check-invalid.j2  check-valid.j2  default.j2  install-confirm.j2  list-skills.j2  prune-proposal.j2  registry-rebuild.j2  registry-status.j2  restore-confirm.j2  retire-warning.j2  selector.j2  stats.j2
skills/skill-workshop/: Cargo.toml  KNOWLEDGE.md  SKILL.md  agent_persona.yaml  hlexicon.yaml  manifest.yaml  skill.json
skills/skill-workshop/templates/: adapt-guidance.j2  audit-report.j2  build-skeleton.j2  coverage-complete.j2  coverage-gaps.j2  discover-results.j2  evaluate-fail.j2  evaluate-pass.j2  install-summary.j2  prune-summary.j2  retire-summary.j2  selector.j2  welcome.j2
skills/sysadmin/: Cargo.toml  KNOWLEDGE.md  SKILL.md  agent_persona.yaml  hlexicon.yaml  manifest.yaml
skills/sysadmin/scripts/: flush-swap.sh  force-clock-sync.sh  probe-clock-offset.sh  probe-coredumps.sh  probe-hkask-services.sh  probe-journal-size.sh  probe-kask-services.sh  probe-remote-services.sh  probe-stale-mounts.sh  probe-swap-detail.sh  probe-systemd-degraded.sh  probe-systemd-failed.sh  probe-zombies.sh  reap-zombies.sh  remove-coredumps.sh
skills/sysadmin/templates/: clock-ok.j2  clock-skew.j2  journal-bloat.j2  journal-ok.j2  journal-vacuum-confirm.j2  no-zombies.j2  reap-zombies-confirm.j2  reset-failed-confirm.j2  selector.j2  sysadmin-menu.j2  systemd-issues.j2  systemd-ok.j2  zombies-found.j2
skills/web-search/: Cargo.toml  KNOWLEDGE.md  SKILL.md  agent_persona.yaml  hlexicon.yaml  manifest.yaml
skills/web-search/templates/: image-results.j2  news-results.j2  selector.j2  web-results.j2
(+518 files in other folders)
