# SPDX-License-Identifier: MIT OR Apache-2.0
# See docs/adr/0013-rust-workspace-layout.md

[workspace]
resolver = "2"
members = [
    "crates/russell-core",
    "crates/russell-sentinel",
    "crates/russell-proprio",
    "crates/russell-meta",
    "crates/russell-skills",
    "crates/russell-cli",
    "crates/russell-testing",
    "crates/russell-acp-server",
    "crates/russell-agent",
    "crates/russell-mcp",
    "crates/russell-reflex",
]

[workspace.package]
version = "0.20.0"
edition = "2024"
rust-version = "1.94"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Replicant-Partners/russell"
authors = ["Russell contributors"]

[workspace.dependencies]
# Internal
russell-core     = { path = "crates/russell-core" }
russell-sentinel = { path = "crates/russell-sentinel" }
russell-skills   = { path = "crates/russell-skills" }
russell-meta     = { path = "crates/russell-meta" }
russell-proprio  = { path = "crates/russell-proprio" }
russell-mcp      = { path = "crates/russell-mcp" }
russell-cli      = { path = "crates/russell-cli" }
russell-testing  = { path = "crates/russell-testing" }
russell-acp-server = { path = "crates/russell-acp-server" }
russell-agent    = { path = "crates/russell-agent" }

# Third-party (see ADRs 0004, 0009, 0010, 0012)
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "signal", "sync", "time", "fs", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
ulid = { version = "1", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "serde-human-readable", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde_yaml = "0.9"
lazy_static = "1"
rustyline = "15"
insta = { version = "1", features = ["yaml", "json"] }
tempfile = "3"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "gzip", "blocking"] }
strsim = "0.11"
rand = "0.8"
minijinja = "2"
zeroize = { version = "1", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
age = { version = "0.11", features = ["armor"] }
async-trait = "0.1"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = 1
lto = "thin"
strip = "debuginfo"
