# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "russell-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "russell"
path = "src/main.rs"

[features]
default = []
# Deprecated: MCP server for IDE frontends. Use russell-acp-server instead.
mcp-server = ["russell-mcp/server"]

[dependencies]
russell-core.workspace = true
russell-sentinel.workspace = true
russell-skills.workspace = true
russell-meta.workspace = true
russell-proprio.workspace = true
# MCP client for hKask tool access (client feature only, server is deprecated)
russell-mcp = { workspace = true, features = ["client"] }
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
serde.workspace = true
serde_yaml.workspace = true
time.workspace = true
rustyline.workspace = true
reqwest.workspace = true
ulid.workspace = true
rand.workspace = true
rpassword = "5"
rusqlite.workspace = true

[dev-dependencies]
tempfile.workspace = true
