# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "russell-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]

thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ulid.workspace = true
time.workspace = true
toml.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
age.workspace = true
async-trait.workspace = true

[dev-dependencies]
tempfile.workspace = true
insta.workspace = true
