# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "russell-doctor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
russell-core.workspace = true
russell-skills.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
time.workspace = true
ulid.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }

[dev-dependencies]
tempfile.workspace = true
insta.workspace = true
