# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "russell-mcp-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
russell-core.workspace = true
russell-sentinel.workspace = true
rmcp = { version = "1.7", features = ["server", "transport-io", "macros"] }
tokio = { workspace = true, features = ["io-util", "io-std"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
