# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "russell-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
reqwest.workspace = true
urlencoding = "2.1"

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
