# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "russell-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = ["client"]
client = ["reqwest", "urlencoding", "async-trait", "chrono"]
server = ["russell-core", "russell-meta", "russell-sentinel", "russell-skills", "rmcp", "tokio/io-util", "tokio/io-std", "anyhow"]

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true

# Client dependencies (optional)
reqwest = { workspace = true, optional = true }
urlencoding = { version = "2.1", optional = true }
async-trait = { version = "0.1", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }

# Server dependencies (optional)
russell-core = { workspace = true, optional = true }
russell-meta = { workspace = true, optional = true }
russell-sentinel = { workspace = true, optional = true }
russell-skills = { workspace = true, optional = true }
rmcp = { version = "1.7", features = ["server", "transport-io", "macros"], optional = true }
anyhow = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
