# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "russell-meta"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
russell-core.workspace = true
russell-skills.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
time.workspace = true
ulid.workspace = true
reqwest.workspace = true
strsim.workspace = true
minijinja.workspace = true
sha2.workspace = true
hex.workspace = true
regex = "1"
lazy_static = "1"

[dev-dependencies]
tempfile.workspace = true
insta.workspace = true
