# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "russell-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Shared ACP/JSON-RPC protocol types for Russell and hKask integration"

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
