# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "russell-reflex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Reflex arcs for Russell — automatic responses to proprioception breaches (Phase 2A: detection-only)"

[lib]
path = "src/lib.rs"

[dependencies]
# Russell workspace crates
russell-core = { workspace = true }
russell-proprio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
